# vs-cmake-conan-wsl-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conan_install.cmake  conanfile.py  launch.vs.json  toolchain.cmake
.conan/: conan.conf
.conan/profiles/: cube3210  gcc8x86  showcase
.conan2/: global.conf
.conan2/extensions/cmake/: conan_install.cmake
.conan2/profiles/: cube3210  gcc8x86  showcase
.devcontainer/: Dockerfile  devcontainer.json
include/mylib/: MyLib.h
src/: Constants.gen.h.in  MyLib.cpp
tests/: CMakeLists.txt  UTMyLib.cpp
